--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ Flask==2.0.2
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
--e git+https://github.com/MIPT-Virtual-Labs/solver-dummy.git@39fb18d58b89ed0565626ceaaea072a08006604b#egg=solver_dummy
+-e git+https://github.com/MIPT-Virtual-Labs/solver-dummy.git@39fb18d58b89ed0565626ceaaea072a08006604b#egg=solver_dummy&subdirectory=../../../submodules/solver-dummy
 Werkzeug==2.0.2
