--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ PyYAML==6.0
 six==1.16.0
 -e git+https://github.com/MIPT-Virtual-Labs/solver-dummy.git@39fb18d58b89ed0565626ceaaea072a08006604b#egg=solver_dummy
 -e git+https://github.com/MIPT-Virtual-Labs/lopato_VL_MIPT_repo.git@5f7a48f09858412071d2f3d68fb1572e64289dc0#egg=solver_gas_dynamics_1d
+-e git+https://github.com/MIPT-Virtual-Labs/CrosSolver.git@0a52b7835c827194e914a5e1213020b3bce17629#egg=cros_solver
 toml==0.10.2
 typing_extensions==4.0.1
 virtualenv==20.10.0
